--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -25,7 +25,7 @@
                     <p><strong>Featured:</strong> <span th:text="${project.featured} ? 'Yes' : 'No'"></span></p>
                     <p><strong>Launch Date:</strong> <span th:text="${project.launchDate}"></span></p> -->
                 </div>
-                <a th:href="@{/request-job}">Solicite a Execução de outro Job</a>
+                <a th:href="@{/request-job}">Solicitar execução de outro Job</a>
             </div>
         </div>
     </div>
