--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -13,17 +13,15 @@
     <div class="container my-3">
         <div class="row">
             <div class="col-md-8 mx-auto">
-                <h2>Resultado da Solicitação de Reprocessamento</h2>
+                <h2>Resumo</h2>
                 <div class="my-3">
                     <p><strong>Job Name:</strong> <span th:text="${executionRequest.jobName}"></span></p>
                     <p><strong>Data do Arquivo:</strong> <span th:text="${executionRequest.fileDate}"></span></p>
                     <p><strong>sequencial:</strong> <span th:text="${executionRequest.sequencial}"></span></p>
-                    <!-- <p><strong>Status do Job:</strong> <span th:text="${executionRequest.jobStatus}"></span></p>
-                    <p><strong>Mensagem:</strong> <span th:text="${executionRequest.mensagem}"></span></p>
-                    <p><strong>Days:</strong> <span th:text="${project.days}"></span></p>
-                    <p><strong>Price:</strong> <span th:text="${project.price}"></span></p>
-                    <p><strong>Featured:</strong> <span th:text="${project.featured} ? 'Yes' : 'No'"></span></p>
-                    <p><strong>Launch Date:</strong> <span th:text="${project.launchDate}"></span></p> -->
+                    <p><strong>Status do Job:</strong> <span th:text="${executionRequest.jobStatus}"></span></p>
+                    <th:block th:if="${executionRequest.message != null}">
+                        <p><strong>Mensagem:</strong> <span th:text="${executionRequest.message}"></span></p>
+                    </th:block>
                 </div>
                 <a th:href="@{/request-job}">Solicitar execução de outro Job</a>
             </div>
