--- a/src/main/resources/templates/submit.html
+++ b/src/main/resources/templates/submit.html
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="col-md-6 mx-auto">
                 <h4 style="text-align: center;">Submissão de Jobs</h4>
-                <form th:action="@{/submit}" th:object="${executionRequest}" method="post">
+                <form action="#" th:action="@{/submit}" th:object="${executionRequest}" method="post">
                     <ul th:if="${#fields.hasErrors('*')}">
                         <li th:each="error : ${#fields.errors('*')}" th:text="${error}">error</li>
                     </ul>
@@ -37,7 +37,10 @@
                     </div>
                     <div class="col-md-6 form-group mx-auto">
                         <button type="submit" class="btn btn-primary
-                                btn-block mt-3">Solicitar execução</button>
+                                btn-block mt-3" name="action" value="execute">Solicitar execução</button>
+                    </div> <div class="col-md-6 form-group mx-auto">
+                        <button type="submit" class="btn btn-primary
+                                btn-block mt-3" name="action" value="detail">Informações do Job</button>
                     </div>
                     <th:block th:if="${executionRequest.message != null}">
                         <p th:align="center"><strong><span th:text="${executionRequest.message}"></span></strong>
