change submit.html to request.html

--- a/src/main/resources/templates/response.html
+++ b/src/main/resources/templates/response.html
@@ -29,7 +29,7 @@
                         <p><strong>Mensagem:</strong> <span th:text="${executionRequest.message}"></span></p>
                     </th:block>
                 </div>
-                <a th:href="@{/submit}">Solicitar execução de outro Job</a>
+                <a th:href="@{/request}">Solicitar execução de outro Job</a>
             </div>
         </div>
     </div>
