--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="col-md-6 mx-auto">
                 <h4 style="text-align: center;">Submissão de Jobs</h4>
-                <form action="#" th:action="@{/submit}" th:object="${executionRequest}" method="post">
+                <form action="#" th:action="@{/request}" th:object="${executionRequest}" method="post">
                     <ul th:if="${#fields.hasErrors('*')}">
                         <li th:each="error : ${#fields.errors('*')}" th:text="${error}">error</li>
                     </ul>
