Validade input field

--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -13,27 +13,30 @@
         <div class="row">
             <div class="col-md-6 mx-auto">
                 <h4 style="text-align: center;">Submissão de Jobs</h4>
-                <form action="#" th:action="@{/request}" th:object="${executionRequest}" method="post">
-                    <ul th:if="${#fields.hasErrors('*')}">
+                <form action="#" th:action="@{/response}" th:object="${executionRequest}" method="post">
+                    <!-- <ul th:if="${#fields.hasErrors('*')}">
                         <li th:each="error : ${#fields.errors('*')}" th:text="${error}">error</li>
-                    </ul>
+                    </ul> -->
                     <div class="col-md-6 form-group mx-auto">
                         <label>Nome do Job</label>
                         <select class="form-control" th:field="*{jobName}">
-                                <option value="">Selecione...</option>
-                                <option value="creditJob">creditJob</option>
-                                <option value="personJob">personJob</option>
-                                <option value="debitJob">debitJob</option>
-                            </select>
+                            <option value="">Selecione...</option>
+                            <option value="creditJob">creditJob</option>
+                            <option value="personJob">personJob</option>
+                            <option value="debitJob">debitJob</option>
+                        </select>
+                        <span th:if="${#fields.hasErrors('jobName')}" class="help-block" th:errors="*{jobName}" th:style="${'color: red;'}"></span>
                     </div>
                     <div class="col-md-6 form-group mx-auto">
                         <label>Data do arquivo</label>
                         <input type="date" class="form-control" th:field="*{fileDate}">
+                        <span th:if="${#fields.hasErrors('fileDate')}" class="help-block" th:errors="*{fileDate}" th:style="${'color: red;'}"></span>
                     </div>
                     <div class="col-md-6 form-group mx-auto">
                         <label>Sequencial*</label>
                         <input type="number" class="form-control" th:field="*{sequencial}">
-
+                        <span th:if="${#fields.hasErrors('sequencial')}" class="help-block" th:errors="*{sequencial}" th:style="${'color: red;'}"></span>
+                        <p th:align="center">*Altere apenas se reprocessamento</p>                        
                     </div>
                     <div class="col-md-6 form-group mx-auto">
                         <button type="submit" class="btn btn-primary
@@ -43,17 +46,11 @@
                                 btn-block mt-3" name="action" value="detail">Informações do Job</button>
                     </div>
                     <th:block th:if="${executionRequest.message != null}">
-                        <p th:align="center"><strong><span th:text="${executionRequest.message}"></span></strong>
+                        <p th:align="center" th:style="${'color: red;'}"><strong><span th:text="${executionRequest.message}"></span></strong>
                         </p>
                     </th:block>
                 </form>
             </div>
-
-        </div>
-
-        <!-- </div> -->
-        <div class="container my-4">
-            <div th:align="center">*Altere apenas se reprocessamento</div>
         </div>
 </body>
 
