--- a/src/main/resources/templates/response.html
+++ b/src/main/resources/templates/response.html
@@ -13,20 +13,20 @@
             <div class="col-md-8 mx-auto">
                 <h2>Detalhamento da Execução do Job</h2>
                 <div class="my-3">
-                    <p><strong>Job Name:</strong> <span th:text="${executionRequest.jobName}"></span></p>
-                    <p><strong>Data do Arquivo:</strong> <span th:text="${executionRequest.fileDate}"></span></p>
-                    <p><strong>sequencial:</strong> <span th:text="${executionRequest.sequencial}"></span></p>
-                    <p><strong>Status do Job:</strong> <span th:text="${executionRequest.jobStatus}"></span></p>
-                    <th:block th:if="${executionRequest.jobExecutionDetail != null}">
+                    <p><strong>Job Name:</strong> <span th:text="${customJobExecution.jobName}"></span></p>
+                    <p><strong>Data do Arquivo:</strong> <span th:text="${customJobExecution.fileDate}"></span></p>
+                    <p><strong>sequencial:</strong> <span th:text="${customJobExecution.sequencial}"></span></p>
+                    <p><strong>Status do Job:</strong> <span th:text="${customJobExecution.jobStatus}"></span></p>
+                    <th:block th:if="${customJobExecution.jobExecutionDetail != null}">
                         <p><strong>Detalhe do Job:</strong> <span
-                                th:text="${executionRequest.jobExecutionDetail}"></span></p>
+                                th:text="${customJobExecution.jobExecutionDetail}"></span></p>
                     </th:block>
-                    <th:block th:if="${executionRequest.StepExecutionDetail != null}">
-                        <p><strong>Detalhe Step Principal:</strong> <span
-                                th:text="${executionRequest.StepExecutionDetail}"></span></p>
+                    <th:block th:if="${customJobExecution.StepExecutionDetail != null}">
+                        <p><strong>Detalhe do Step Principal:</strong> <span
+                                th:text="${customJobExecution.StepExecutionDetail}"></span></p>
                     </th:block>
-                    <th:block th:if="${executionRequest.message != null}">
-                        <p><strong>Mensagem:</strong> <span th:text="${executionRequest.message}"></span></p>
+                    <th:block th:if="${customJobExecution.message != null}">
+                        <p><strong>Mensagem:</strong> <span th:text="${customJobExecution.message}"></span></p>
                     </th:block>
                 </div>
                 <a th:href="@{/job-manager}">Solicitar execução de outro Job</a>
