--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -10,8 +10,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-static-top">
-        <span class="navbar-brand mb-0 h1">Cálculo da Receita de Intercâmbio -
-            Mastercard</span>
+        <span class="navbar-brand mb-0 h1">Cálculo da Receita de Intercâmbio</span>
     </nav>
 
     <div class="container my-3">
