incluido jobStep para start varios jobs em sequencia

--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -25,6 +25,7 @@
                             <option value="creditJob">creditJob</option>
                             <option value="personJob">personJob</option>
                             <option value="debitJob">debitJob</option>
+                            <option value="jobStepJob">jobStepJob</option>
                         </select>
                         <span th:if="${#fields.hasErrors('jobName')}" class="help-block" th:errors="*{jobName}" th:style="${'color: red;'}"></span>
                     </div>
