--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,4 +1,4 @@
-@charset "ISO-8859-1";
+@charset "UTF-8";
 body {font-family : verdana, sans-serif;}
 h1 {margin-left: 7em; color: MidnightBlue;}
 td {padding: 1em;}
@@ -6,3 +6,15 @@ th {border-bottom-style: solid;}
 label { font-weight: 500; padding-right: .5em; }
 div {margin-left: 4em;}
 select {margin-left: 4em;}
+
+footer {
+    position: fixed;
+    height: 50px;
+    bottom: 0;
+    width: 100%;
+    background-color: #ccc
+}
+
+footer p {
+    padding: 15px;
+}
