mais um mondicoisa

--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -26,7 +26,7 @@
                             <option value="debitJob">debitJob</option>
                             <option value="personJob">personJob</option>
                             <option value="slimPersonJob">slimPersonJob</option>
-                            <option value="principalJob">principalJob</option>
+                            <option value="parentJob">parentJob</option>
                         </select>
                         <span th:if="${#fields.hasErrors('jobName')}" class="help-block" th:errors="*{jobName}" th:style="${'color: red;'}"></span>
                     </div>
